// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`for erikoistumiskoulutus, erikoistumiskoulutusKoodiUri is resolved 1`] = `
{
  "ePerusteId": null,
  "esikatselu": false,
  "externalId": null,
  "johtaaTutkintoon": false,
  "julkinen": false,
  "kielivalinta": [
    "fi",
    "sv",
  ],
  "koulutuksetKoodiUri": [],
  "koulutustyyppi": "erikoistumiskoulutus",
  "metadata": {
    "erikoistumiskoulutusKoodiUri": "erikoistumiskoulutukset_001#2",
    "isAvoinKorkeakoulutus": false,
    "koulutusalaKoodiUrit": [
      "koulutusala_1#1",
      "koulutusala_2#1",
    ],
    "koulutustyyppi": "erikoistumiskoulutus",
    "kuvaus": {},
    "linkkiEPerusteisiin": {},
    "lisatiedot": [],
    "luokittelutermit": [],
    "opinnonTyyppiKoodiUri": null,
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusNumeroMax": 10,
    "opintojenLaajuusNumeroMin": 5,
    "opintojenLaajuusyksikkoKoodiUri": "opintojenlaajuusyksikko_2#1",
    "osaamisalaKoodiUri": null,
    "osaamismerkkiKoodiUri": null,
    "osaamistavoitteet": {
      "fi": "<p>Fi osaamistavoitteet</p>",
      "sv": "<p>Sv osaamistavoitteet</p>",
    },
    "tunniste": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "erikoistumiskoulutus",
  },
  "muokkaaja": undefined,
  "nimi": {},
  "organisaatioOid": undefined,
  "sorakuvausId": null,
  "tarjoajat": [],
  "teemakuva": undefined,
  "tila": "tallennettu",
}
`;

exports[`for osaamisala koulutus, koulutusKoodiUri is resolved 1`] = `
{
  "ePerusteId": null,
  "esikatselu": false,
  "externalId": null,
  "johtaaTutkintoon": false,
  "julkinen": false,
  "kielivalinta": [],
  "koulutuksetKoodiUri": [
    "koulutus_371101#1",
  ],
  "koulutustyyppi": "amm-osaamisala",
  "metadata": {
    "erikoistumiskoulutusKoodiUri": null,
    "isAvoinKorkeakoulutus": false,
    "koulutusalaKoodiUrit": [],
    "koulutustyyppi": "amm-osaamisala",
    "kuvaus": {},
    "linkkiEPerusteisiin": {},
    "lisatiedot": [],
    "luokittelutermit": [],
    "opinnonTyyppiKoodiUri": null,
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "osaamismerkkiKoodiUri": null,
    "osaamistavoitteet": {},
    "tunniste": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "amm-osaamisala",
  },
  "muokkaaja": undefined,
  "nimi": {},
  "organisaatioOid": undefined,
  "sorakuvausId": null,
  "tarjoajat": [],
  "teemakuva": undefined,
  "tila": "tallennettu",
}
`;

exports[`getKoulutusByFormValues returns correct koulutuksetKoodiUri for ammatillinen koulutus 1`] = `
{
  "ePerusteId": 1,
  "esikatselu": false,
  "externalId": "ext1",
  "johtaaTutkintoon": true,
  "julkinen": false,
  "kielivalinta": [],
  "koulutuksetKoodiUri": [
    "koulutuskoodi_1#1",
  ],
  "koulutustyyppi": "amm",
  "metadata": {
    "erikoistumiskoulutusKoodiUri": null,
    "isAvoinKorkeakoulutus": false,
    "koulutusalaKoodiUrit": [
      "koulutusala_1#1",
      "koulutusala_2#1",
    ],
    "koulutustyyppi": "amm",
    "kuvaus": {},
    "linkkiEPerusteisiin": {},
    "lisatiedot": [],
    "luokittelutermit": [],
    "opinnonTyyppiKoodiUri": null,
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "osaamismerkkiKoodiUri": null,
    "osaamistavoitteet": {},
    "tunniste": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [
      "nimike_1#1",
      "nimike_2#1",
    ],
    "tyyppi": "amm",
  },
  "muokkaaja": undefined,
  "nimi": {},
  "organisaatioOid": undefined,
  "sorakuvausId": null,
  "tarjoajat": [],
  "teemakuva": undefined,
  "tila": "tallennettu",
}
`;

exports[`getKoulutusByFormValues returns correct koulutus given form values 1`] = `
{
  "ePerusteId": null,
  "esikatselu": false,
  "externalId": "ext1",
  "johtaaTutkintoon": true,
  "julkinen": true,
  "kielivalinta": [
    "fi",
    "sv",
  ],
  "koulutuksetKoodiUri": [
    "koulutus_371101#1",
    "koulutus_201000#1",
  ],
  "koulutustyyppi": "yo",
  "metadata": {
    "erikoistumiskoulutusKoodiUri": null,
    "isAvoinKorkeakoulutus": false,
    "koulutusalaKoodiUrit": [
      "koulutusala_1#1",
      "koulutusala_2#1",
    ],
    "koulutustyyppi": "yo",
    "kuvaus": {
      "fi": "<p>Fi kuvaus</p>",
      "sv": "<p>Sv kuvaus</p>",
    },
    "linkkiEPerusteisiin": {},
    "lisatiedot": [
      {
        "otsikkoKoodiUri": "osio_1#1",
        "teksti": {},
      },
      {
        "otsikkoKoodiUri": "osio_2#1",
        "teksti": {
          "fi": "<p>Fi kuvaus</p>",
          "sv": "<p>Sv kuvaus</p>",
        },
      },
    ],
    "luokittelutermit": [
      "termi1",
      "termi2",
    ],
    "opinnonTyyppiKoodiUri": null,
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "osaamismerkkiKoodiUri": null,
    "osaamistavoitteet": {},
    "tunniste": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [
      "nimike_1#1",
      "nimike_2#1",
    ],
    "tyyppi": "yo",
  },
  "muokkaaja": "1.1.1.1",
  "nimi": {
    "fi": "Fi nimi",
    "sv": "Sv nimi",
  },
  "organisaatioOid": undefined,
  "sorakuvausId": "1234",
  "tarjoajat": [
    "123.456.789",
  ],
  "teemakuva": undefined,
  "tila": "tallennettu",
}
`;

exports[`it should return empty array if no koulutusKoodiUri given 1`] = `
{
  "ePerusteId": null,
  "esikatselu": false,
  "externalId": null,
  "johtaaTutkintoon": true,
  "julkinen": false,
  "kielivalinta": [],
  "koulutuksetKoodiUri": [],
  "koulutustyyppi": "yo",
  "metadata": {
    "erikoistumiskoulutusKoodiUri": null,
    "isAvoinKorkeakoulutus": false,
    "koulutusalaKoodiUrit": [],
    "koulutustyyppi": "yo",
    "kuvaus": {},
    "linkkiEPerusteisiin": {},
    "lisatiedot": [],
    "luokittelutermit": [],
    "opinnonTyyppiKoodiUri": null,
    "opintojenLaajuusNumero": null,
    "opintojenLaajuusNumeroMax": null,
    "opintojenLaajuusNumeroMin": null,
    "opintojenLaajuusyksikkoKoodiUri": null,
    "osaamisalaKoodiUri": null,
    "osaamismerkkiKoodiUri": null,
    "osaamistavoitteet": {},
    "tunniste": null,
    "tutkinnonOsat": [],
    "tutkintonimikeKoodiUrit": [],
    "tyyppi": "yo",
  },
  "muokkaaja": undefined,
  "nimi": {},
  "organisaatioOid": undefined,
  "sorakuvausId": null,
  "tarjoajat": [],
  "teemakuva": undefined,
  "tila": "tallennettu",
}
`;
